@@ -1,3 +1,8 @@
+2009-01-26  Pedro Alves  <pedro@codesourcery.com>
+
+	* gdb.texinfo (Using the `gdbserver' Program): Document
+	--remote-debug.
+
 2009-01-23  Doug Evans  <dje@google.com>
 
 	* gdb.texinfo: Add nexti to list of commands that support
